--- a/src/components/atoms/SimpleTopNav/SimpleTopNav.module.scss
+++ b/src/components/atoms/SimpleTopNav/SimpleTopNav.module.scss
@@ -8,6 +8,7 @@
   padding: var(--spacing-md) var(--spacing-lg);
   background-color: var(--color-white);
   border-bottom: var(--border-width-thin) solid var(--color-border-secondary);
+  height: 100%;
   min-height: 60px;
   font-family: var(--font-family);
   width: 100%;
