feat: Add DatePicker component and update Calendar styling - Add new DatePicker component with Input integration - Update Calendar day label spacing from 4px to 2px for better visual alignment - Change today date color from red to blue in Calendar - Remove down chevron from Calendar month/year button - Ensure DatePicker uses existing PulseUI Calendar component

--- a/src/components/atoms/Calendar/CalendarParts/CalendarDate.module.scss
+++ b/src/components/atoms/Calendar/CalendarParts/CalendarDate.module.scss
@@ -38,7 +38,7 @@
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background-color: var(--color-red-6);
+  background-color: var(--color-blue-6);
   z-index: 2;
 }
 
@@ -119,11 +119,11 @@
 }
 
 .variant-holiday {
-  color: var(--color-red-7);
+  color: var(--color-blue-7);
   background-color: transparent;
 
   &:hover:not(:disabled) {
-    background-color: var(--color-red-1);
+    background-color: var(--color-blue-1);
   }
 }
 
@@ -180,7 +180,7 @@
   color: var(--color-blue-9);
 
   .indicator {
-    background-color: var(--color-red-6);
+    background-color: var(--color-blue-6);
     opacity: 0.6;
   }
 
